Bunch of cleanup, add dates to models/responses
